--- a/PhotoShareApp/Base.lproj/Main.storyboard
+++ b/PhotoShareApp/Base.lproj/Main.storyboard
@@ -85,14 +85,39 @@
                     <view key="view" contentMode="scaleToFill" id="W99-jd-Rq2">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="upload" translatesAutoresizingMaskIntoConstraints="NO" id="PQB-yM-TMu">
+                                <rect key="frame" x="44" y="144" width="308" height="310"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Write your comment" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nIs-dw-emn">
+                                <rect key="frame" x="44" y="497" width="308" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lTd-pJ-UDA">
+                                <rect key="frame" x="159" y="603" width="79" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Upload"/>
+                                <connections>
+                                    <action selector="uploadTapped:" destination="pJQ-PO-T9A" eventType="touchUpInside" id="S1i-D1-XhJ"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="fIx-cF-U1j"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Upload" image="shift.fill" catalog="system" id="Cih-0X-xJf"/>
+                    <connections>
+                        <outlet property="commentTextField" destination="nIs-dw-emn" id="MdD-bF-OdB"/>
+                        <outlet property="imageView" destination="PQB-yM-TMu" id="AUp-tn-8X3"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pOJ-gd-eWS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="538" y="289"/>
+            <point key="canvasLocation" x="536.64122137404581" y="288.73239436619718"/>
         </scene>
         <!--Settings-->
         <scene sceneID="uMj-AB-gnN">
@@ -170,6 +195,7 @@
         <image name="gear" catalog="system" width="128" height="122"/>
         <image name="mosaic.fill" catalog="system" width="128" height="114"/>
         <image name="shift.fill" catalog="system" width="128" height="106"/>
+        <image name="upload" width="1166" height="834"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
