--- a/PhotoShareApp/Base.lproj/Main.storyboard
+++ b/PhotoShareApp/Base.lproj/Main.storyboard
@@ -18,17 +18,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photo Feed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ff4-7c-tWg">
-                                <rect key="frame" x="130" y="99" width="133" height="33"/>
+                                <rect key="frame" x="81.666666666666686" y="99" width="133" height="33"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <color key="textColor" red="0.27843138579999999" green="0.60784316059999999" blue="0.39607840779999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TEs-w7-R3s">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TEs-w7-R3s">
                                 <rect key="frame" x="68" y="174" width="256" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mwJ-Lh-NHC">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mwJ-Lh-NHC">
                                 <rect key="frame" x="68" y="240" width="256" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -53,17 +53,19 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Ff4-7c-tWg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="81.670000000000002" id="4mz-vf-qSo"/>
                             <constraint firstItem="TEs-w7-R3s" firstAttribute="top" secondItem="Ff4-7c-tWg" secondAttribute="bottom" constant="42" id="7Di-d7-t3e"/>
                             <constraint firstItem="TEs-w7-R3s" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="68" id="9Nh-CO-uha"/>
                             <constraint firstItem="Ff4-7c-tWg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="Aj9-KI-e4C"/>
                             <constraint firstItem="Ihj-xI-myn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="73" id="I0k-5k-GFo"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ff4-7c-tWg" secondAttribute="trailing" constant="178.33000000000001" id="Lwt-Mb-M5q"/>
                             <constraint firstItem="Ihj-xI-myn" firstAttribute="baseline" secondItem="JNd-d4-IFq" secondAttribute="baseline" id="NUs-ro-8bO"/>
                             <constraint firstItem="Ihj-xI-myn" firstAttribute="top" secondItem="mwJ-Lh-NHC" secondAttribute="bottom" constant="43" id="UQT-vj-pVu"/>
-                            <constraint firstItem="Ff4-7c-tWg" firstAttribute="centerX" secondItem="TEs-w7-R3s" secondAttribute="centerX" id="VSm-nt-xSn"/>
+                            <constraint firstItem="mwJ-Lh-NHC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="68" id="YfT-OO-F8E"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mwJ-Lh-NHC" secondAttribute="trailing" constant="69" id="cUA-4g-ijf"/>
                             <constraint firstItem="mwJ-Lh-NHC" firstAttribute="top" secondItem="TEs-w7-R3s" secondAttribute="bottom" constant="32" id="eF5-I9-Tjr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JNd-d4-IFq" secondAttribute="trailing" constant="66" id="kSS-bk-aiX"/>
                             <constraint firstItem="TEs-w7-R3s" firstAttribute="leading" secondItem="mwJ-Lh-NHC" secondAttribute="leading" id="kke-m6-wKY"/>
-                            <constraint firstItem="TEs-w7-R3s" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qfb-L0-hRW"/>
                             <constraint firstItem="TEs-w7-R3s" firstAttribute="trailing" secondItem="mwJ-Lh-NHC" secondAttribute="trailing" id="wmV-u8-GvE"/>
                         </constraints>
                     </view>
@@ -178,20 +180,23 @@
                                                     <accessibility key="accessibilityConfiguration">
                                                         <bool key="isElement" value="YES"/>
                                                     </accessibility>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="207" id="bOn-Pz-cGi"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B8H-FE-dNq">
-                                                    <rect key="frame" x="20" y="271" width="363" height="37"/>
+                                                    <rect key="frame" x="20" y="271" width="353" height="37"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="37" id="Rwn-xK-Pwt"/>
+                                                        <constraint firstAttribute="height" constant="37" id="Tke-Bk-aaq"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9g7-9M-i82">
-                                                    <rect key="frame" x="20" y="11" width="373" height="37"/>
+                                                    <rect key="frame" x="20" y="0.0" width="353" height="48"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="37" id="Qx0-MC-A6V"/>
+                                                        <constraint firstAttribute="height" constant="48" id="6dM-aT-yoe"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -199,16 +204,18 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="o4D-Oj-2rb" firstAttribute="leading" secondItem="B8H-FE-dNq" secondAttribute="leading" id="0jx-Sq-k6u"/>
-                                                <constraint firstItem="o4D-Oj-2rb" firstAttribute="leading" secondItem="9g7-9M-i82" secondAttribute="leading" id="BIE-DB-8aE"/>
-                                                <constraint firstItem="o4D-Oj-2rb" firstAttribute="top" secondItem="tq4-7j-kCZ" secondAttribute="topMargin" constant="45" id="S4S-QE-cOW"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="B8H-FE-dNq" secondAttribute="trailing" constant="-10" id="XdB-NB-H0o"/>
-                                                <constraint firstItem="o4D-Oj-2rb" firstAttribute="top" secondItem="9g7-9M-i82" secondAttribute="bottom" constant="8" symbolic="YES" id="XqL-bE-ofR"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="B8H-FE-dNq" secondAttribute="bottom" constant="27" id="Zek-Yw-lZS"/>
-                                                <constraint firstItem="o4D-Oj-2rb" firstAttribute="leading" secondItem="tq4-7j-kCZ" secondAttribute="leadingMargin" id="cgl-av-2De"/>
-                                                <constraint firstItem="o4D-Oj-2rb" firstAttribute="trailing" secondItem="tq4-7j-kCZ" secondAttribute="trailingMargin" id="eI6-qi-e2h"/>
-                                                <constraint firstAttribute="trailing" secondItem="9g7-9M-i82" secondAttribute="trailing" id="oBv-AF-HB4"/>
-                                                <constraint firstItem="B8H-FE-dNq" firstAttribute="top" secondItem="o4D-Oj-2rb" secondAttribute="bottom" constant="8" symbolic="YES" id="rIY-Vd-eA2"/>
+                                                <constraint firstItem="o4D-Oj-2rb" firstAttribute="leading" secondItem="B8H-FE-dNq" secondAttribute="leading" id="1tY-lK-csH"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="o4D-Oj-2rb" secondAttribute="trailing" id="78M-So-nOd"/>
+                                                <constraint firstItem="9g7-9M-i82" firstAttribute="leading" secondItem="o4D-Oj-2rb" secondAttribute="leading" id="AP3-Kd-Vja"/>
+                                                <constraint firstItem="B8H-FE-dNq" firstAttribute="top" secondItem="o4D-Oj-2rb" secondAttribute="bottom" constant="8" symbolic="YES" id="Bv6-D6-Tdq"/>
+                                                <constraint firstItem="9g7-9M-i82" firstAttribute="leading" secondItem="tq4-7j-kCZ" secondAttribute="leadingMargin" id="KUa-7E-cCl"/>
+                                                <constraint firstItem="o4D-Oj-2rb" firstAttribute="leading" secondItem="tq4-7j-kCZ" secondAttribute="leadingMargin" id="Ror-6h-P0Y"/>
+                                                <constraint firstItem="9g7-9M-i82" firstAttribute="top" secondItem="tq4-7j-kCZ" secondAttribute="top" id="SAI-e7-CEI"/>
+                                                <constraint firstItem="o4D-Oj-2rb" firstAttribute="trailing" secondItem="tq4-7j-kCZ" secondAttribute="trailingMargin" id="Wvm-07-WG1"/>
+                                                <constraint firstItem="o4D-Oj-2rb" firstAttribute="top" secondItem="9g7-9M-i82" secondAttribute="bottom" constant="8" symbolic="YES" id="bL1-e4-Yrk"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="B8H-FE-dNq" secondAttribute="bottom" constant="27" id="cst-Ai-eqe"/>
+                                                <constraint firstItem="9g7-9M-i82" firstAttribute="trailing" secondItem="o4D-Oj-2rb" secondAttribute="trailing" id="fgX-z9-EBl"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="B8H-FE-dNq" secondAttribute="trailing" id="ydz-LX-Mqu"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -223,10 +230,10 @@
                         <viewLayoutGuide key="safeArea" id="nnE-IF-tQa"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="nnE-IF-tQa" firstAttribute="bottom" secondItem="igQ-iN-SxK" secondAttribute="bottom" id="42g-lK-iiS"/>
-                            <constraint firstItem="igQ-iN-SxK" firstAttribute="top" secondItem="nnE-IF-tQa" secondAttribute="top" id="BWY-gc-kaL"/>
-                            <constraint firstItem="igQ-iN-SxK" firstAttribute="leading" secondItem="nnE-IF-tQa" secondAttribute="leading" id="Zr0-Z1-iGJ"/>
-                            <constraint firstItem="nnE-IF-tQa" firstAttribute="trailing" secondItem="igQ-iN-SxK" secondAttribute="trailing" id="pBw-GV-mcR"/>
+                            <constraint firstItem="igQ-iN-SxK" firstAttribute="bottom" secondItem="nnE-IF-tQa" secondAttribute="bottom" id="VTy-m5-Nad"/>
+                            <constraint firstAttribute="trailing" secondItem="igQ-iN-SxK" secondAttribute="trailing" id="VXx-SD-Z3q"/>
+                            <constraint firstItem="igQ-iN-SxK" firstAttribute="top" secondItem="nnE-IF-tQa" secondAttribute="top" id="vLg-Gy-z59"/>
+                            <constraint firstItem="igQ-iN-SxK" firstAttribute="leading" secondItem="zpd-84-vq8" secondAttribute="leading" id="xvm-gA-D4v"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Feed" image="mosaic.fill" catalog="system" id="i2x-Yd-QuD"/>
